# ModelPanel3D

./: .gitignore  CMakeLists.txt
include/: HelperFunc.h  MainPage.h
model/: model_panel_STL.stl
src/: HelperFunc.cpp  MainPage.cpp  main.cpp
